# js-sem-highlight

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  marketplace.yml  release.yml
client/: .vscodeignore  package-lock.json  package.json  tsconfig.json
client/src/: extension.ts
client/src/test/: runTest.ts
client/src/test/suite/: extension.test.ts  index.ts
crates/lsp/: Cargo.toml
crates/lsp/benches/: semantic_tokens.rs
crates/lsp/src/: backend.rs  cache.rs  config.rs  lib.rs  tokens.rs
crates/parsing/: Cargo.toml
crates/parsing/src/: document.rs  language.rs  lib.rs  offset.rs  tokens.rs
crates/parsing/tests/: error_tolerance.rs  proptest_offsets.rs
crates/rules/: Cargo.toml
crates/rules/src/: context.rs  lib.rs  registry.rs  rules.rs  severity.rs
crates/scopes/: Cargo.toml
crates/scopes/src/: cancellation.rs  globals.rs  lib.rs  role.rs  scope_map.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/tests/: e2e_harness.rs
docs/: bug-bash-report.md  dhat-heap-50docs.json  perf.md  scenario-coverage.md
scripts/: bug-bash-probe.py  bug-bash.sh  package-extension.sh
