[package]
name = "js-sem-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "js_sem_lsp"
path = "src/lib.rs"

[dependencies]
js-sem-parsing = { path = "../parsing" }
js-sem-scopes = { path = "../scopes" }
js-sem-rules = { path = "../rules" }
tokio = { workspace = true }
tower-lsp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
ropey = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "semantic_tokens"
harness = false

[lints]
workspace = true
