[package]
name = "js-sem-parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "js_sem_parsing"
path = "src/lib.rs"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
ropey = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tower-lsp = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
