[package]
name = "js-sem-scopes"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "js_sem_scopes"
path = "src/lib.rs"

[dependencies]
js-sem-parsing = { path = "../parsing" }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_ast = { workspace = true }
oxc_allocator = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
